// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns typography styles for body1 1`] = `
"
    font-size: 16px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0.5px;
  "
`;

exports[`returns typography styles for body2 1`] = `
"
    font-size: 14px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0.25px;
  "
`;

exports[`returns typography styles for button 1`] = `
"
    font-size: 14px;
    font-family: var(--typeface);
    font-weight: var(--font-medium);
    text-transform: uppercase;
    letter-spacing: 1.25px;
  "
`;

exports[`returns typography styles for caption 1`] = `
"
    font-size: 12px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0.4px;
  "
`;

exports[`returns typography styles for headline1 1`] = `
"
    font-size: 96px;
    font-family: var(--typeface);
    font-weight: var(--font-light);
    text-transform: none;
    letter-spacing: -1.5px;
  "
`;

exports[`returns typography styles for headline2 1`] = `
"
    font-size: 60px;
    font-family: var(--typeface);
    font-weight: var(--font-light);
    text-transform: none;
    letter-spacing: -0.5px;
  "
`;

exports[`returns typography styles for headline3 1`] = `
"
    font-size: 48px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0px;
  "
`;

exports[`returns typography styles for headline4 1`] = `
"
    font-size: 34px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0.25px;
  "
`;

exports[`returns typography styles for headline5 1`] = `
"
    font-size: 24px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0px;
  "
`;

exports[`returns typography styles for headline6 1`] = `
"
    font-size: 20px;
    font-family: var(--typeface);
    font-weight: var(--font-medium);
    text-transform: none;
    letter-spacing: 0.15px;
  "
`;

exports[`returns typography styles for overline 1`] = `
"
    font-size: 10px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: uppercase;
    letter-spacing: 1.5px;
  "
`;

exports[`returns typography styles for subtitle1 1`] = `
"
    font-size: 16px;
    font-family: var(--typeface);
    font-weight: var(--font-regular);
    text-transform: none;
    letter-spacing: 0.15px;
  "
`;

exports[`returns typography styles for subtitle2 1`] = `
"
    font-size: 14px;
    font-family: var(--typeface);
    font-weight: var(--font-medium);
    text-transform: none;
    letter-spacing: 0.1px;
  "
`;
